<resources>
    <string name="app_name">PolicyBol</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PolicyBol</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="message">Hello India</string>
    <string name="appbar_scrolling_view" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <!--First Screen-->
    <string name="btn_exist_cust">Existing Customer</string>
    <string name="btn_guest">Guest User</string>
    <string name="btn_channel">Channel Partner</string>
    <!--Register Mobile-->
    <string name="register_data"><![CDATA[<b>Existing Customer / Policy Holder with Policybol</b>]]></string>
    <string name="cust_auth">Customer Authentication</string>
    <string name="enter_reg_mobile">Enter Registered Mobile Number</string>
    <string name="reg_mob_otp_msg">We will be sending you an OTP shortly</string>
    <!--OTP Title-->
    <string name="otp_title"><b>Mobile Number Verification</b>\n<b>(Enter the OTP below)</b></string>
    <string name="enter_otp">Enter OTP</string>
    <!--New Customer-->
    <string name="sign_up_title"><![CDATA[<b>Create New User For Login</b>]]></string>
    <string name="sign_up_cust_id">Customer ID:</string>
    <string name="sign_up_username">Enter Username</string>
    <string name="sign_up_pwd">Enter Password</string>
    <string name="sign_up_cf_pwd">Confirm Password</string>
    <string name="sign_up_agree"><u>Agreed to Terms &amp; Conditions</u></string>
    <!--Login Customer-->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="forgot">Forgot Password</string>
    <string name="title_activity_login">Enter Your Login Details</string>
    <string name="logout">Logout</string>

    <!--Home-->
    <string name="btn_cust_info">Customer\nInformation</string>
    <string name="btn_my_policy">My Policies</string>
    <string name="btn_refer_us">Refer Us</string>
    <string name="btn_co_dis">Coupons/Discounts</string>
    <string name="btn_upload">Upload Image</string>
    <string name="btn_sell_purchase">Sell/Purchase</string>
    <string name="btn_share">Share</string>

    <!--Add Customer-->
    <string name="enter_cust_name">Enter Contact Name</string>
    <string name="add_cust_title">Please provide contact details of any of your friends or family, we will be sharing your location details with them in case you use our \' SOS Service \'</string>
    <string name="enter_contact_no">Mobile Number</string>
    <!--Emergency Contact-->
    <string name="emerg_title_name">Name</string>
    <string name="emerg_title_rel">Relation</string>
    <string name="emerg_title_number">Number</string>
    <string name="emerg_action">Action</string>
    <!--First Time User DIalog-->
    <string name="first_time_dialog">There is no Emergency Contact added by you</string>
    <string name="goback">Go Back</string>
    <string name="addnow">Add Now</string>
    <!--Customer Information-->
    <string name="cust_name">Name</string>
    <string name="cust_gender">Gender</string>
    <string name="cust_dob">DOB</string>
    <string name="cust_email">Email</string>
    <string name="cust_mobile">Mobile</string>
    <string name="cust_mar_status">Marital Status</string>
    <string name="cust_add">Address</string>
    <string name="action_search">Search</string>
    <!--Refer-->
    <string name="refer_title">You Can Refer Anyone To PolicyBol</string>
    <string name="email_opt">Email(Optional)</string>
    <!--Action-->
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="add_contact">Add Contact</string>
    <string name="share_title">Share Via:</string>
    <string name="share_email">Email</string>
    <string name="share_sms">SMS</string>
    <string name="share">Share</string>
    <string name="btn_sos">SOS</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sample">Sign in</string>
    <string name="title_activity_my_policy">MyPolicy</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Motor</string>
    <string name="tab_text_2">Health</string>
    <string name="tab_text_3">Others</string>
    <!--Fragment card view items-->
    <string name="reg_no">Reg. No</string>
    <string name="vehicle_make">Vehicle Make</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="policy_hold_name">Policy Holder Name</string>
    <string name="valid">Valid upto</string>
    <string name="policy_no">Policy no</string>
    <string name="add">Add</string>
    <string name="enter_email">Enter email id</string>
    <string name="enter_mobile_no">Enter Mobile Number</string>
    <string name="below_text">If you wish to get in touch with us,\nPlease feel free to call on 1234567890</string>
    <string name="btn_callus">Call Us</string>
</resources>
