<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:apps="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        apps:cardCornerRadius="@dimen/appbar_padding_top"
        apps:cardBackgroundColor="@color/colortext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/nav_header_vertical_spacing"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pol_reg_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reg_no" />

                <TextView
                    android:id="@+id/pol_v_make"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicle_make" />

                <TextView
                    android:id="@+id/pol_v_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicle_model" />

                <TextView
                    android:id="@+id/pol_hol_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/policy_hold_name" />

                <TextView
                    android:id="@+id/pol_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/policy_no" />

                <TextView
                    android:id="@+id/pol_valid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valid" />
            </LinearLayout>

            <Button
                android:id="@+id/pdfview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:backgroundTint="@color/colorButton"
                android:text="View" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>