<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_margin"
            android:gravity="center"
            android:text="@string/refer_title"
            android:textAppearance="@style/TitleStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_from_title"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/contactname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:hint="@string/enter_cust_name"
                android:inputType="text" />

            <ImageView
                android:id="@+id/phonebook"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:onClick="onClick"
                android:src="@drawable/ic_contact" />
        </LinearLayout>

        <Spinner
            android:id="@+id/c_relation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin" />

        <EditText
            android:id="@+id/contactno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:hint="@string/enter_contact_no"
            android:inputType="text" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_opt"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_agree"
                android:textAppearance="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:background="@color/colorsecApp"
            android:gravity="center"
            android:onClick="onClick"
            android:padding="@dimen/fab_margin"
            android:text="@string/submit"
            android:textColor="@color/colortext" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>