<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorsecApp"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:padding="@dimen/nav_header_vertical_spacing"
                    android:text="@string/emerg_title_name"
                    android:gravity="center"
                    android:textColor="@color/colortext"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/nav_header_vertical_spacing"
                    android:text="@string/emerg_title_rel"
                    android:textColor="@color/colortext"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:padding="@dimen/nav_header_vertical_spacing"
                    android:text="@string/emerg_title_number"
                    android:gravity="center"
                    android:textColor="@color/colortext"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/nav_header_vertical_spacing"
                    android:text="@string/emerg_action"
                    android:gravity="center"
                    android:textColor="@color/colortext"
                    />
            </TableRow>
        </TableLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/all_emerg_contact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:padding="@dimen/table_sep"
            />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>